2023.04.23
Version 1.4
Optimization.
The radius of action is displayed only at the central building in the template.



2023.04.18
Version 1.3
Chinese localization (Great thanks STAR-KY-XH @ discord).



2023.03.18
Version 1.2
Fixed non-square building foundation bug.

If the template has already been created, then when using the Picker, the composition of the template will be shown in the tooltip.



2023.03.07
Version 1.1
Fixed bug: Turrets can be added to the template. Buildings with zero construction cost can be added to the template.
Added building availability check before spawning building's ghost in builder tool.
If the template has already been created, a warning is shown at the start of using the picker.



2023.03.06
Version 1.0