@@ -1,0 +1,12 @@
+EntityBlueprint
+{
+	name			"misc/mass_limited_buildings_builder"
+
+	LuaDesc
+	{
+		script		"lua/misc/mass_limited_buildings_builder.lua"
+		database
+		{
+		}
+	}
+}
