@@ -1,3 +1,8 @@
+Fixed mass construction of limited buildings.
+Exiting the construction tool does not interrupt the construction of limited buildings.
+
+
+
 2023.04.23
 Version 1.4
 Optimization.
